Quick scribble to prove the concept

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -27,6 +27,7 @@
 @import "community";
 @import "striped_list";
 @import "status-label";
+@import "community-badge";
 @import "post";
 @import "collapsible-nav";
 @import "collapsible-sidebar";
